err_last.txt
    Checking auth-framework v0.5.0-rc18 (C:\Users\cires\OneDrive\Documents\projects\AuthFramework)
error[E0425]: cannot find type `ReportRequest` in this scope
  --> src\analytics\reports.rs:63:18
   |
63 |         request: ReportRequest,
   |                  ^^^^^^^^^^^^^ not found in this scope

warning: unused imports: `ReportType` and `TimeRange`
 --> src\analytics\reports.rs:8:29
  |
8 | use super::{AnalyticsError, ReportType, TimeRange};
  |                             ^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `security_incidents` in initializer of `ComplianceMetrics`
   --> src\analytics\mod.rs:461:12
    |
461 |         Ok(ComplianceMetrics {
    |            ^^^^^^^^^^^^^^^^^ missing `security_incidents`

error[E0560]: struct `TrendAnalysis` has no field named `percent_change`
   --> src\analytics\mod.rs:555:13
    |
555 |             percent_change: 10.0,
    |             ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
555 -             percent_change: 10.0,
555 +             change_percent: 10.0,
    |

error[E0560]: struct `TrendAnalysis` has no field named `direction`
   --> src\analytics\mod.rs:556:13
    |
556 |             direction,
    |             ^^^^^^^^^ `TrendAnalysis` does not have this field
    |
    = note: available fields are: `change_percent`, `trend`

warning: unused variable: `prefix`
  --> src\storage\core.rs:91:34
   |
91 |     async fn list_kv_keys(&self, prefix: &str) -> Result<Vec<String>> {
   |                                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_prefix`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0425, E0560.
For more information about an error, try `rustc --explain E0063`.
warning: `auth-framework` (lib) generated 2 warnings
error: could not compile `auth-framework` (lib) due to 4 previous errors; 2 warnings emitted
